--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
   <!-- vendors -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+  <script src="assets/js/app.js"></script>
+
   <!-- My css -->
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/about.css">
@@ -40,10 +42,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="media.html">Media</a>
           <a class="nav-item nav-link" href="trivia.html">Trivia</a>
-          <a class="nav-item nav-link" href="about.html">About</a>
+          <a class="nav-item nav-link active" aria-current="page" href="about.html">About</a>
           <a class="nav-item nav-link" href="faq.html">FAQ</a>
           <a class="nav-item nav-link" href="contacts.html">Contact</a>
           <a class="nav-item nav-link disabled" href="#"></a>
