--- a/media.html
+++ b/media.html
@@ -52,8 +52,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="media.html">Media</a>
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" aria-current="page" href="media.html">Media</a>
           <a class="nav-item nav-link" href="trivia.html">Trivia</a>
           <a class="nav-item nav-link" href="about.html">About</a>
           <a class="nav-item nav-link" href="faq.html">FAQ</a>
