--- a/trivia.html
+++ b/trivia.html
@@ -23,10 +23,10 @@
 
   <!-- my css -->
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/trivia.css">
 
   <!-- js -->
   <script src="assets/js/trivia.js"></script>
+  <script src="assets/js/app.js"></script>
 </head>
 
 <body>
@@ -40,9 +40,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="media.html">Media</a>
-          <a class="nav-item nav-link" href="trivia.html">Trivia</a>
+          <a class="nav-item nav-link active" aria-current="page" href="trivia.html">Trivia</a>
           <a class="nav-item nav-link" href="about.html">About</a>
           <a class="nav-item nav-link" href="faq.html">FAQ</a>
           <a class="nav-item nav-link" href="contacts.html">Contact</a>
@@ -117,6 +117,14 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
